--- a/src/style/main.less
+++ b/src/style/main.less
@@ -19,3 +19,5 @@
 @import "partials/modal.less";
 @import "partials/modal-success.less";
 @import "partials/modal-overlay.less";
+@import "partials/modal-gallery-form.less";
+//@import "./node_modules/bootstrap/dist/css/bootstrap-grid.css";
