--- a/src/style/partials/main-footer.less
+++ b/src/style/partials/main-footer.less
@@ -2,7 +2,7 @@
   padding: 30px 0;
   background: @footer-bg-color;
   color: #ffffff;
-  text-align: center;
+
 }
 .main-footer a {
   color: #ffffff;
@@ -20,6 +20,7 @@
   float: none;
   padding-top: 0;
   margin-bottom: 30px;
+  text-align: center;
   .for-tablet-up({
     margin-bottom: 0;
     float: right;
@@ -29,6 +30,7 @@
   margin: 0 auto;
   .for-tablet-up({
     margin: 0;
+
     });
 }
 .footer-logo {
@@ -38,7 +40,12 @@
     margin-bottom: 0;
     });
 }
-
+.footer-logo p {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 14px;
+  text-align: left;
+}
 .footer-logo-text {
   display: inline-block;
   vertical-align: top;
