--- a/src/style/partials/main-header.less
+++ b/src/style/partials/main-header.less
@@ -122,6 +122,11 @@
     }
     });
 }
+.main-navigation .selected {
+  &:hover {
+    text-decoration: none;
+  }
+}
 .main-navigation-show {
   display: block;
 
