--- a/src/style/partials/make-order.less
+++ b/src/style/partials/make-order.less
@@ -11,8 +11,14 @@
 }
 .make-order h2 {
   .for-tablet-up({
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     color: #ffffff;
+    &:first-child {
+      margin-bottom: 20px;
+    }
+    &:last-of-type {
+      margin-top: 20px;
+    }
     });
 }
 .make-order p {
@@ -23,8 +29,8 @@
 }
 .make-order-wrap {
   .container-make-order();
-
 }
+
 .make-order-form {
   font-size: 0;
 }
