--- a/src/style/partials/mixins.less
+++ b/src/style/partials/mixins.less
@@ -38,6 +38,12 @@
     width: 750px;
     });
 }
+.container-about-img() {
+  width: 100%;
+  .for-tablet-up({
+    width: 100%;
+    });
+}
 .container-gallery() {
   width: 310px;
   margin: 0 auto;
