--- a/src/style/partials/modal-gallery-form.less
+++ b/src/style/partials/modal-gallery-form.less
@@ -1,8 +1,8 @@
-.modal-content {
+.modal-gallery {
   display: none;
   position: fixed;
   box-sizing: border-box;
-  top: 120px;
+  top: 10px;
   left: 50%;
   z-index: 20;
   width: 320px;
@@ -12,7 +12,9 @@
   color: #000000;
   background: #ffffff;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.75);
-  
+  .for-tablet-up({
+    top: 120px;
+    });
 }
 
 .modal-order-form input {
@@ -22,7 +24,7 @@
 .modal-order-btn {
   width: 280px;
 }
-.modal-content-close {
+.modal-gallery-close {
 	position: absolute;
 	top: 0px;
 	right: 0px;
@@ -34,8 +36,8 @@
 	cursor: pointer;
 	background-color: #ffffff;
 }
-.modal-content-close::before,
-.modal-content-close::after {
+.modal-gallery-close::before,
+.modal-gallery-close::after {
 	position: absolute;
 	top: 10px;
 	left: 2px;
@@ -46,12 +48,12 @@
 	border-radius: 1px;
 
 }
-.modal-content-close::before {
+.modal-gallery-close::before {
 	transform: rotate(45deg);
 }
-.modal-content-close::after {
+.modal-gallery-close::after {
 	transform: rotate(-45deg);
 }
-.modal-content-show {
+.modal-gallery-show {
   display: block;
 }
