--- a/src/style/partials/reviews.less
+++ b/src/style/partials/reviews.less
@@ -7,7 +7,7 @@
   text-align: center;
 }
 .reviews-wrap {
-  .container-reviews();
+  .container();
 }
 .slick-review-item {
     padding: 0 50px;
@@ -20,15 +20,13 @@
   margin: 0 auto;
   margin-bottom: 40px;
   padding-top: 120px;
-  width: 220px;
+  width: 100%;
   .for-tablet-up({
     display: inline-block;
     vertical-align: top;
-    width: 300px;
-    margin-right: 45px;
-    &:nth-child(2n){
-      margin-right: 0;
-    }
+    width: 40%;
+    margin-left: 9%;
+
 
     });
   &::before{
